# ivan-050-wasm

./: CMakeLists.txt  readme.md
FeLib/: CMakeLists.txt
FeLib/Include/: femath.h  festring.h  graphics.h  hscore.h  rawbit.h  v2.h
FeLib/Source/: bitmap.cpp  config.cpp  error.cpp  feio.cpp  graphics.cpp  save.cpp  whandler.cpp
Main/: CMakeLists.txt
Main/Include/: game.h  iconf.h  ivandef.h
Main/Source/: game.cpp  human.cpp  iconf.cpp  igraph.cpp  lsquare.cpp  main.cpp
Main/html/: ivan-shell.html
docs/: index.html  ivan.data  ivan.js  loadFile.js
